--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "framer-motion": "^11.3.21",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
