--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "axios": "^1.7.2",
     "framer-motion": "^11.3.21",
     "jsonwebtoken": "^9.0.2",
-    "next": "14.2.1",
+    "jspdf": "^2.5.2",
+    "next": "^14.2.13",
     "react": "^18",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "zustand": "^4.5.2"
   },
