--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.16",
     "axios": "^1.7.2",
+    "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
+    "moment": "^2.30.1",
     "next": "^14.2.13",
     "react": "^18",
+    "react-big-calendar": "^1.17.1",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^18",
+    "sonner": "^1.7.2",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
